--- a/util/BUILD
+++ b/util/BUILD
@@ -1,5 +1,10 @@
 cc_library(
   name = "util",
-  hdrs = ["string.h","types.h"],
+  hdrs = [
+      "string.h",
+      "types.h",
+      "log.h",
+      "short.h",
+    ],
   visibility = ["//visibility:public"],
 )
